--- a/index.html
+++ b/index.html
@@ -51,6 +51,30 @@
 						<p>Політ на повітряній кулі - мрія чи реальність?</p>
 					</figcaption>
 				</div>
+				<div data-index="7">
+					<img src="img/slides/slide-1.png" alt="One">
+					<figcaption>
+						<p>Політ на повітряній кулі - мрія чи реальність?</p>
+					</figcaption>
+				</div>
+				<div data-index="8">
+					<img src="img/slides/slide-1.png" alt="One">
+					<figcaption>
+						<p>Політ на повітряній кулі - мрія чи реальність?</p>
+					</figcaption>
+				</div>
+				<div data-index="9">
+					<img src="img/slides/slide-1.png" alt="One">
+					<figcaption>
+						<p>Політ на повітряній кулі - мрія чи реальність?</p>
+					</figcaption>
+				</div>
+				<div data-index="10">
+					<img src="img/slides/slide-1.png" alt="One">
+					<figcaption>
+						<p>Політ на повітряній кулі - мрія чи реальність?</p>
+					</figcaption>
+				</div>
 			</div>
             
             <!-- THUMBNAILS -->
@@ -66,6 +90,14 @@
 				<div><img src="img/slides/slide-1-thumbernail.png" slide="slide_5">
 				</div>
 				<div><img src="img/slides/slide-1-thumbernail.png" slide="slide_6">
+				</div>
+				<div><img src="img/slides/slide-1-thumbernail.png" slide="slide_7">
+				</div>
+				<div><img src="img/slides/slide-1-thumbernail.png" slide="slide_8">
+				</div>
+				<div><img src="img/slides/slide-1-thumbernail.png" slide="slide_9">
+				</div>
+				<div><img src="img/slides/slide-1-thumbernail.png" slide="slide_10">
 				</div>
 			</div>
         </div>
